--- a/requirements.txt
+++ b/requirements.txt
@@ -45,3 +45,6 @@ bandit>=1.7.5
 # ==============================
 sphinx>=7.1.0
 sphinx-rtd-theme>=1.3.0
+
+# ==============================
+httpx>=0.24.0
